<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.roombook.BookRoomFragment">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="left"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

            <com.roombookingapp.ui.custom.TimerBarLayout
                android:id="@+id/timerBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slot_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/slot_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_no"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/room_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint" />

            <LinearLayout
                android:id="@+id/person_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" />

            <Button
                android:id="@+id/addperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_person" />

            <LinearLayout
                android:id="@+id/add_person_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/personName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint" />

                <EditText
                    android:id="@+id/personEmail"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/personPhone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:inputType="phone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/hide_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hide" />

                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/sendPassButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sendpass" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>