<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:background="#F5F5F5"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <RelativeLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="#fff"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/prevdaybtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignTop="@id/date"
                    android:layout_toLeftOf="@id/date"
                    android:layout_toStartOf="@id/date"
                    android:src="@drawable/icon_arrow_prev" />

                <ImageView
                    android:id="@+id/nextdaybtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignTop="@id/date"
                    android:layout_toEndOf="@id/date"
                    android:layout_toRightOf="@id/date"
                    android:src="@drawable/icon_arrow_next" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/seach_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filter" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:hint="@string/filter_hint" />

        <CheckedTextView
            android:id="@+id/checkbox_hour"
            style="@style/AppTheme.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/available_one_hour" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
